# hunterteck

./: .env.example  .gitignore  AIDA_QUICK_REFERENCE.md  ANALISE_PROJETO.md  ARQUITETURA.md  CHANGELOG.md  COMECE_AQUI.md  COMPARACAO_ANTES_DEPOIS.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  EXTRATOR_DADOS_REAIS.md  GROQ_ARCHITECTURE.md  GROQ_MIGRATION.md  INDEX.md  INDICE_COMPLETO.md  INIT.bat  INIT.sh  INTEGRACAO_AIDA_EMAIL.md  MUDANCAS_TECNICAS.md  Makefile  ORGANIZATION.md  ORGANIZATION_COMPLETE.txt  PRODUCT_MATCHER_SUMMARY.md  PROJECT_STRUCTURE.md  PROXIMOS_PASSOS.md  QUICK_START.md  README.md  README_PRODUCT_MATCHER.md  REFERENCIA_DADOS.md  RESUMO_EXECUTIVO.md  RESUMO_REFACTORING.md  SMTP_ARQUITETURA_COMPLETA.md  SMTP_DISPATCHER.md  SMTP_QUICK_REFERENCE.md  START_GUIDE.md  START_HERE.txt  STREAMLIT_GUIDE.md  TLDR.md  app_hunter.py  docker-compose.yml  (+18 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml
backend/: README.md
deployment/docker/: Dockerfile  Dockerfile.streamlit
deployment/scripts/: deploy.sh
docs/: README.md
frontend/: README.md
mlops/: README.md
scripts/: check-quality.sh  setup.sh
services/lead_extractor/: PRODUCT_MATCHER.md  __init__.py  config.py  database.py  email_generator.py  enricher.py  extractors.py  main.py  models.py  person_finder.py  product_matcher.py  requirements.txt  smtp_dispatcher.py  validator.py
services/telegram-vagas-bot/: .env.example  Dockerfile  docker-compose-snippet.yml  get_ids.py  main.py  requirements.txt
services/telegram-vagas-bot/data/: meu_userbot.session  meu_userbot.session-journal
